# MSD

./: .gitignore  README.md
CS6010/: README.md
CS6013/: A2_vocab_assignement.txt
CS6013/A1_assembly_programming/: main.cpp  myAsm.s
CS6013/L2_Assembly/: l2.s
CS6013/L3_IPC/: main  main.cpp  shell.cpp
CS6013/ParallelReductions/: CMakeLists.txt  analysis.md  main.cpp  plot.py  pyproject.toml  strong_scaling.csv  weak_scaling.csv
CS6013/Week1/Day1/: lab1  (+2 more)
CS6013/malloc/: CMakeLists.txt  conclusion.md
CS6013/malloc/src/: allocator.cpp  allocator.h  hash_table.cpp  hash_table.h  helper.cpp  helper.h  main.cpp
CS6013/malloc/tests/: test_allocator.cpp  test_hash_table.cpp
CS6013/nasm_tutorial/: hello_old.asm
CS6013/thread_safe_queue/: CMakeLists.txt  ConcurrentQueue.hpp  ConcurrentQueueTest.cpp  SerialQueue.hpp  SerialQueueTests.cpp  main  main.cpp
CS6013/unix_shell/: .pre-commit-config.yaml  CMakeLists.txt  Makefile  main
CS6014/BufferOverflowAttack/: log.md  login  login.asm  login.c  otool_login.asm  password.txt
CS6014/CodeBreaker/: pom.xml
CS6014/Cryptography/: CMakeLists.txt  Makefile  answers.md  crypto.cpp  crypto.h  main  main.cpp  rc4.cpp  rc4.h  test_crypto.cpp  tests
CS6014/LowerNetworkLayers/: answers.md  pom.xml
CS6014/MSDNS/: dig_request  pom.xml
CS6014/PacketDelayMeasurement/: answers.md  ping.txt  pyproject.toml  test_route.txt  www.admin.ch_2025-01-13_15:17:32.txt  www.admin.ch_2025-01-13_15:17:32_averages.csv  www.admin.ch_2025-01-13_20:05:23.txt  www.admin.ch_2025-01-13_20:05:23_averages.csv
CS6014/PacketDelayMeasurement/packetdelaymeasurement/: main.py  ping.py  plot_averages.py  test_main.py  test_traceroute.py  traceroute.py
CS6014/TLSlite/: pom.xml
CS6015/Assignment1Qt/: mainwidget.h
CS6015/Assignment2Qt/: A2Resources.qrc  Assignment2Qt.pro  bucketman.cpp  bucketman.h  constants.h  gamescene.cpp  gamescene.h  main.cpp  raindrop.cpp  raindrop.h
CS6016/: ~$b_3_relational_algebra.docx
CS6016/JupyterProject/: sample.ipynb
CS6016/JupyterProject1/: nlp.ipynb
CS6016/JupyterProject2/: sample.ipynb
CS6016/lab_1/: lab.md
CS6016/lab_2/: chess.sql
CS6016/lab_3/: lab_3_relational_algebra.docx
CS6016/lab_4/: create_tables.sql  queries.sql
CS6016/lab_5/: queries.sql
CS6016/lab_9/: indexes.md
CS6016/phase_2/: create.sql
CS6016/phase_3/: phase2dump.sql
CS6017/day_1/: sample.ipynb
CS6017/homework_1/: requirements.txt  sample.ipynb
CS6017/homework_2/: sample.ipynb
CS6017/homework_3/: sample.ipynb  scrape.py
CS6017/homework_4/: sample.ipynb
CS6017/homework_5/: sample.ipynb
CS6017/homework_6/: sample.ipynb
CS6018/applicationServer/: .gitignore  README.md  build.gradle.kts  compose.yaml  local.properties  settings.gradle.kts
CS6018/aug_reality/: settings.gradle.kts
CS6018/maracas/: settings.gradle.kts
Day_3/Day_3/: main.cpp
day_10/day_10/: main.cpp
day_11/day_11/: NumberConversionLab
day_11/day_11.xcodeproj/: project.pbxproj
day_12/day_12/: main.cpp
day_12/day_12.xcodeproj/: project.pbxproj
day_13/day_13/: Day13_bits.cpp
day_14/day_14/: main.cpp
day_15/day_15/: main.cpp
day_15/day_15.xcodeproj/: project.pbxproj
day_17/day_17.xcodeproj/: project.pbxproj
day_2/day_2/: main.cpp
day_2/day_2.xcodeproj/: project.pbxproj
day_20/day_20/: main.cpp
day_21/day_21.xcodeproj/: project.pbxproj
day_22/day_22/: main.cpp
day_23/day_23.xcodeproj/: project.pbxproj
day_5/day_5.xcodeproj/: project.pbxproj
day_6/day_6/: math_operations.hpp
day_6/day_6.xcodeproj/: project.pbxproj
day_7/day_7/: main.cpp
day_8/day_8/: main.cpp
day_8/day_8.xcodeproj/: project.pbxproj
day_9/day_9/: main.cpp
msd_hello_world/msd_hello_world/: main.cpp
msd_hello_world/msd_hello_world.xcodeproj/: project.pbxproj
sfml_homebrewinstallation/sfml_homebrewinstallation.xcodeproj/: project.pbxproj
(+602 files in other folders)
